# A-tiny-POV

./: .gitignore  CMakeLists.txt  Makefile  README.md  build_attiny.sh  build_local.sh  custom.h  font.c  font.h  main.c  output.c  pov.c
cmake/cmake-avr/: README.md
cmake/modules/: DownloadProject.CMakeLists.cmake.in  DownloadProject.cmake  FindCmocka.cmake  Utils.cmake
device/: CMakeLists.txt  device.dox  main.c  main.cpp
device/avr/: CMakeLists.txt  avr.dox  avr_device.cpp  device.c  device_specific.h
device/include/: device.h  device_interface.dox
device/mockavr/: CMakeLists.txt  device.c  device_specific.h  mock_device.cpp  mockavr.dox
doc/: Doxyfile.in  footer.html
libPOV/: BU4094BC.cpp  BU4094BC.h  CMakeLists.txt  config.h  display.cpp  display.h  font.c  font.cpp  font.h  libPOV.dox  output.c  output.h
tests/: CMakeLists.txt  DownloadProject.CMakeLists.cmake.in  DownloadProject.cmake  test.dox  test_BU4094BC.cpp  test_example.c  test_example_gtest.cpp  test_font.cpp  utils.h
